[gd_scene load_steps=7 format=3 uid="uid://cn6hvpx7nmxrk"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/components/stats_component.gd" id="2_stats"]
[ext_resource type="Script" path="res://scripts/components/spell_caster.gd" id="3_spell_caster"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 2.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CameraPivot:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
fov = 90.0

[node name="WeaponHolder" type="Node3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.2, -0.5)

[node name="RayCast3D" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 7

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_stats")

[node name="SpellCaster" type="Node" parent="."]
script = ExtResource("3_spell_caster")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1")
